# datagrunt-studio

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
app/: globals.css  layout.tsx  page.tsx
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: api_models.py  config.py  datagrunt_service.py  gcs_service.py  main.py  pdf_service.py  query_engine.py  session.py  session_registry.py  sql_builder.py
backend/seed/: q4_forecast.xlsx  raw_sales_data.csv  region_master.csv
backend/tests/: conftest.py  test_api.py  test_datagrunt_service.py  test_gcs_api.py  test_gcs_service.py  test_pdf_api.py  test_pdf_service.py  test_query_engine.py  test_session_registry.py  test_sql_builder.py
backend/tests/fixtures/: legacy_book.xls  preamble.csv  preamble_two_sheets.xlsx  semicolon.csv  two_sheets.xlsx
components/: CodeViewer.tsx  DataPreviewModal.tsx  DownloadMenu.tsx  GcsBrowserModal.tsx  GcsExportDialog.tsx  ImportPreviewPanel.tsx  PythonEditor.tsx  ResizeHandle.tsx  ResultsGrid.tsx  SqlEditor.tsx
hooks/: use-debounced-value.test.ts  use-debounced-value.ts  use-mobile.ts  use-paged-rows.test.ts  use-paged-rows.ts
lib/: api.test.ts  api.ts  editor-schema.test.ts  editor-schema.ts  export-filename.test.ts  export-filename.ts  gcs-path.test.ts  gcs-path.ts  import-read-options.test.ts  import-read-options.ts  import-summary.test.ts  import-summary.ts  json-result.test.ts  json-result.ts  pagination.test.ts  pagination.ts  row-search.ts  (+7 more)
(+31 files in other folders)
